--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11185.3" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11151.4"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="APIDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +17,62 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="UbC-RK-o3K"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What's the Weather" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCn-pR-PoU">
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your city" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rKL-Ri-lId">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ie. London, San Francisco" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8aN-pq-Mwo">
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rmb-ss-Nfq">
+                                <state key="normal" title="Submit"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7sS-MB-feA">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="360" id="MXs-CI-CTu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="UbC-RK-o3K" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="C5D-PO-WAF"/>
+                            <constraint firstItem="rmb-ss-Nfq" firstAttribute="top" secondItem="8aN-pq-Mwo" secondAttribute="bottom" constant="25" id="CLI-1h-WvS"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="UbC-RK-o3K" secondAttribute="bottom" id="Lxm-oX-8sl"/>
+                            <constraint firstItem="8aN-pq-Mwo" firstAttribute="top" secondItem="rKL-Ri-lId" secondAttribute="bottom" constant="25" id="Rl1-EO-sQF"/>
+                            <constraint firstItem="JCn-pR-PoU" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="SWl-vH-Eon"/>
+                            <constraint firstItem="UbC-RK-o3K" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="SfH-kI-WtV"/>
+                            <constraint firstItem="8aN-pq-Mwo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="15" id="T1L-mP-MK1"/>
+                            <constraint firstItem="JCn-pR-PoU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="15" id="WmI-ZY-6XM"/>
+                            <constraint firstAttribute="trailing" secondItem="JCn-pR-PoU" secondAttribute="trailing" constant="15" id="Wxm-Db-c6o"/>
+                            <constraint firstItem="7sS-MB-feA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="15" id="XKJ-KZ-DXh"/>
+                            <constraint firstItem="rmb-ss-Nfq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YQ9-uh-mWB"/>
+                            <constraint firstItem="rKL-Ri-lId" firstAttribute="top" secondItem="JCn-pR-PoU" secondAttribute="bottom" constant="25" id="dis-U8-Gdi"/>
+                            <constraint firstItem="rKL-Ri-lId" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k1A-vd-5ac"/>
+                            <constraint firstAttribute="trailing" secondItem="UbC-RK-o3K" secondAttribute="trailing" id="qOe-M1-uue"/>
+                            <constraint firstAttribute="trailing" secondItem="8aN-pq-Mwo" secondAttribute="trailing" constant="15" id="r1X-S7-ZvS"/>
+                            <constraint firstItem="7sS-MB-feA" firstAttribute="top" secondItem="rmb-ss-Nfq" secondAttribute="bottom" constant="25" id="tSv-0w-DSq"/>
+                            <constraint firstAttribute="trailing" secondItem="7sS-MB-feA" secondAttribute="trailing" constant="15" id="zuD-BT-RJ6"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="136.28185907046478"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="background.jpeg" width="1000" height="665"/>
+    </resources>
 </document>
